# yt-shorts-generator

./: .env  .env.example  .gitignore  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml
scripts/: setup_models.py
src/shortgen/: __init__.py  config.py  main.py
src/shortgen/acquisition/: __init__.py  downloader.py
src/shortgen/analysis/: __init__.py  audio_analyzer.py  face_tracker.py  gemini_highlight_finder.py  highlight_finder.py  scene_detector.py  transcription.py
src/shortgen/api/: __init__.py  app.py
src/shortgen/cli/: __init__.py  commands.py
src/shortgen/core/: __init__.py  exceptions.py  models.py  pipeline.py
src/shortgen/output/: __init__.py  renderer.py
src/shortgen/processing/: __init__.py  captioner.py  clipper.py  cropper.py
src/shortgen/scoring/: __init__.py  scorer.py
src/shortgen/utils/: __init__.py  logging.py
src/shortgen/workers/: __init__.py
static/: index.html
tests/: __init__.py  conftest.py
tests/unit/: test_scorer.py
