[project]
name = "shortgen"
version = "0.1.0"
description = "Generate YouTube Shorts/Reels from long-form videos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.0",
    "openai-whisper>=20231117",
    "moviepy>=1.0.3",
    "librosa>=0.10.0",
    "scenedetect[opencv]>=0.6.0",
    "opencv-python>=4.8.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
mediapipe = [
    "mediapipe>=0.10.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
shortgen = "shortgen.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shortgen"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.isort]
known-first-party = ["shortgen"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]